--- a/public_html/a/week004.html
+++ b/public_html/a/week004.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>w004 ddd</title>
-    <link rel="stylesheet" href="./css/2021.css">
+    <link rel="stylesheet" href="../css/2021.css">
 </head>
 
 <body>
