--- a/public_html/a/week001.html
+++ b/public_html/a/week001.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>001.html</title>
+    <title>week001</title>
     <link rel="stylesheet" href="../css/2021.css">
 </head>
 
