Week001 to show WEEK 1

--- a/public_html/a/week001.html
+++ b/public_html/a/week001.html
@@ -16,7 +16,7 @@
                 <tr>
                     <td><img src="../icons/smaller_logo.png" alt="smaller_logo.png" /></td>
                     <td style="padding: 25px; color: white;"><span style="font-size: large;"><span
-                                class="ellipsible">Successful Demonstration of Competency</span></span></td>
+                                class="ellipsible">WEEK 1</span></span></td>
                 </tr>
             </tbody>
         </table>
