week003b fixed css and icons folders

--- a/public_html/a/week002b.html
+++ b/public_html/a/week002b.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>week002b</title>
+    <title>week 2</title>
     <link rel="stylesheet" href="../css/2023.css">
 </head>
 
