--- a/public_html/a/week003b.html
+++ b/public_html/a/week003b.html
@@ -1,17 +1,17 @@
-w<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    <link rel="stylesheet" href="./css/2023.css">
+    <title>week 3</title>
+    <link rel="stylesheet" href="../css/2023.css">
 </head>
 
 <body>
     <ul id="logo">
         <li style="padding: 0px 25px 25px; background-color: #005588;">
-            <img src="./icons/smaller_logo.png" alt="smaller_logo.png" />
+            <img src="../icons/smaller_logo.png" alt="smaller_logo.png" />
         </li>
         <!-- <li>
             Development I. Week 1, 09/18/2023
@@ -435,10 +435,9 @@ w<!DOCTYPE html>
 
     <footer>
         <div>
-            <a href=""><span>&#171;</span></a>
-            <a href=""> <span>&#187;</span></a>
-            <a
-                href="file:///C:/Users/edmonds/AppData/Local/OPE/OPELMS/content/www_root/canvas_file_cache/index.html"><span>&#8962;</span></a>
+            <a href="week002b.html"><span>&#171;</span></a>
+            <a href="week004b.html"> <span>&#187;</span></a>
+            <a href="/"><span>&#8962;</span></a>
         </div>
     </footer>
     </div>
