Nav bar fixed at top, 10 weeks tabs

--- a/public_html/a/week004b.html
+++ b/public_html/a/week004b.html
@@ -114,33 +114,33 @@ w
             <article class="articlevideo">
                 <video controls="controls">
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 3 of 6 - Images and Hyperlinks-CGSdK7FI9MY.mkv"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 3 of 6 - Images and Hyperlinks-CGSdK7FI9MY.mkv"
+                        type="video/mp4" />
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 3 of 6 - Images and Hyperlinks-CGSdK7FI9MY.mkv"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 3 of 6 - Images and Hyperlinks-CGSdK7FI9MY.mkv"
+                        type="video/mp4" />
                 </video>
                 <h2>images and hyperlinks</h2>
             </article>
             <article class="articlevideo">
                 <video controls="controls">
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 4 of 6 - Audio and Video-4I1WgJz_lmA.mkv"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 4 of 6 - Audio and Video-4I1WgJz_lmA.mkv"
+                        type="video/mp4" />
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 4 of 6 - Audio and Video-4I1WgJz_lmA.mkv"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - part 4 of 6 - Audio and Video-4I1WgJz_lmA.mkv"
+                        type="video/mp4" />
                 </video>
                 <h2>Audio and Video tags</h2>
             </article>
             <article class="articlevideo">
                 <video controls="controls">
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 5 of 6 - New Semantic Elements-dDn9uw7N9Xg.mp4"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 5 of 6 - New Semantic Elements-dDn9uw7N9Xg.mp4"
+                        type="video/mp4" />
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 5 of 6 - New Semantic Elements-dDn9uw7N9Xg.mp4"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 5 of 6 - New Semantic Elements-dDn9uw7N9Xg.mp4"
+                        type="video/mp4" />
                 </video>
                 <h2>Semantic elements</h2>
                 <!-- <h2>XXXXXXXXXXXXXXXXXXXXXXX</h2> -->
@@ -148,11 +148,11 @@ w
             <article class="articlevideo">
                 <video controls="controls">
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 6 of 6 - CSS Page Layout-CPcS4HtrUEU.webm"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 6 of 6 - CSS Page Layout-CPcS4HtrUEU.webm"
+                        type="video/mp4" />
                     <source
-                    src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 6 of 6 - CSS Page Layout-CPcS4HtrUEU.webm"
-                    type="video/mp4" />
+                        src="/youtube.nel/public_html/RAW-VIDEOS/bucky-roberts/HTML5 Tutorial For Beginners - 6 of 6 - CSS Page Layout-CPcS4HtrUEU.webm"
+                        type="video/mp4" />
                 </video>
                 <h2>CSS Page Layout</h2>
             </article>
@@ -516,9 +516,8 @@ w
     <footer>
         <div>
             <a href="week003b.html"><span>&#171;</span></a>
-            <a href="week005.html"> <span>&#187;</span></a>
-            <a
-                href="/"><span>&#8962;</span></a>
+            <a href="week005b.html"> <span>&#187;</span></a>
+            <a href="/"><span>&#8962;</span></a>
         </div>
     </footer>
     </div>
