--- a/public_html/a/week005b.html
+++ b/public_html/a/week005b.html
@@ -1,4 +1,3 @@
-w
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,40 +7,66 @@ w
     <title>week 5b</title>
     <link rel="stylesheet" href="../css/2023.css">
     <style>
-        nav  ul {
+        nav ul {
+            display: flex;
+            flex-direction: row;
+            /* border: 4px solid pink; */
+            width: 100%;
+            justify-content: space-around;
             list-style-type: none;
+            /* background-color: #333; */
+            background-color: #005588;
+            position: fixed;
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            background-color: #333;
-            position: fixed;
-            top: 0;
-            width: 100%;
         }
 
         nav ul li {
-            float: left;
+            margin: 0;
+            padding: 0;
         }
 
         nav ul li a {
-            display: block;
             color: white;
             text-align: center;
-            padding: 14px 16px;
+            text-transform: uppercase;
+            /* padding: 1em; */
             text-decoration: none;
         }
 
         nav ul li a:hover:not(.active) {
-            background-color: #111;
+            background-color: #df1414;
         }
 
-        .active {
-            background-color: #04AA6D;
+        nav ul li a.active {
+            background-color: green;
+            /* padding: 2.1em; */
         }
+
+        /* .active {
+            background-color: #04AA6D;
+        } */
     </style>
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="#week1">week 1</a> </li>
+            <li><a href="#week2">week 2</a> </li>
+            <li><a href="#week3">week 3</a></li>
+            <li><a href="#week4">week 4</a></li>
+            <li><a href="#week5">week 5</a></li>
+            <li><a href="#week6">week 6</a> </li>
+            <li><a href="#week7">week 7</a> </li>
+            <li><a href="#week8">week 8</a></li>
+            <li><a href="#week9">week 9</a></li>
+            <li><a href="#week10">week 10</a></li>
+            <li><a href="#week11">week 11</a></li>
+            <li><a href="#week12">week 12</a></li>
+
+        </ul>
+    </nav>
     <ul id="logo">
         <li style="padding: 0px 25px 25px; background-color: #005588;">
             <img src="../icons/smaller_logo.png" alt="smaller_logo.png" />
@@ -63,16 +88,7 @@ w
         </li>
     </ul>
 
-    <nav>
-        <ul>
-            <li><a href="#week1">week 1</a> </li>
-            <li><a href="#week2">week 2</a> </li>
-            <li><a href="#week3"> week 3</a></li>
-            <li><a href="#week4"> week 4</a></li>
-            <li><a href="#week5"> week 5</a></li>
-            
-        </ul>
-    </nav>
+
     <details>
         <h3>Web Development I</h3>
         <ol>
