index-cfc fixed canvas intro and overview. Pending filemanagement and intro

--- a/public_html/a/index_cfc.html
+++ b/public_html/a/index_cfc.html
@@ -561,7 +561,7 @@
                         <source
                             src="\\c\Users\Public\Videos\RAW-VIDEOS\canvas-git-vscode - Copy\200 - Canvas Overview for Students-74677642.mp4" />
                         <source
-                            src="\\CISgen2\Users\Public\Videos\RAW-VIDEOS\Q1BigRawVideos\1a-2021-canvas-intro-x3j8V-uLkNw.mp4" />
+                            src="http://localhost:22022/youtube.nel/public_html/RAW-VIDEOS/200%20-%20Canvas%20Overview%20for%20Students-74677642.mp4" />
                         <source src="./canvas_file_cache/200 - Canvas Overview for Students-74677642.mp4" />
                     </video>
                     <h2>Canvas intro</h2>
@@ -585,7 +585,7 @@
                     <video controls="controls">
                         <source src="./canvas_file_cache/2021-canvas-intro-x3j8V-uLkNw.mp4" />
 
-                        <source src="XXXXXXXXXXX" type="video/mp4" />
+                        <source src="http://localhost:22022/youtube.nel/public_html/RAW-VIDEOS/Q1BigRawVideos/2021-canvas-intro-x3j8V-uLkNw.mp4" type="video/mp4" />
                     </video>
                     <h2 class="videoTitle">Canvas Overview II</h2>
 
@@ -809,8 +809,8 @@
             <article class="articlenovideo">
 
                 <h3>Chp3-Using the Internet: Making the Most of the Web’s Resources </h3>
-                <a href="RAW-241/chapters-tech-in-action/chapter3a.pdf">Chapter 3a</a>
-                <a href="RAW-241/chapters-tech-in-action/chapter3b.pdf">Chapter 3b</a>
+                <a href="http://localhost:22022/example.nel/public_html/a/RAW-241/chapters-tech-in-action/chapter3a.pdf">Chapter 3a</a>
+                <a href="http://localhost:22022/example.nel/public_html/a/RAW-241/chapters-tech-in-action/chapter3b.pdf">Chapter 3b</a>
 
             </article>
 
