index-cfc week05 linkt to w3s fixed. Pending weeks6-7-8

--- a/public_html/a/index_cfc.html
+++ b/public_html/a/index_cfc.html
@@ -169,41 +169,41 @@
             <ul>
                 <li><a href="https://www.w3schools.com/tags/tag_doctype.asp">DOCTYPE declaration asp</a>
                 </li>
-                <li><a href="/www.w3schools.com/tags/tag_doctype.html">DOCTYPE declaration html</a>
+                <li><a href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_doctype.html">DOCTYPE declaration html</a>
                 </li>
 
-                <li>&lt;html&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_doctype.html"
+                <li>&lt;html&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_doctype.html"
                         target="">tag</a>
                 </li>
-                <li>&lt;head&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_head.html"
+                <li>&lt;head&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_head.html"
                         target="">tag</a>
                 </li>
-                <li>&lt;meta&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_meta.html"
+                <li>&lt;meta&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_meta.html"
                         target="">tag</a>
                 </li>
-                <li>&lt;title&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_title.html"
+                <li>&lt;title&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_title.html"
                         target="">tag</a>
                 </li>
-                <li>&lt;body&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_body.html"
+                <li>&lt;body&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_body.html"
                         target="">tag</a>
                 </li>
-                <li>&lt;table&gt; <a id="" class="" title="" href="/www.w3schools.com/tags/tag_table.html"
+                <li>&lt;table&gt; <a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_table.html"
                         target="">tag</a>
                 </li>
                 <li>Paragraph formatting and block-level elements</li>
                 <li>Heading elements</li>
                 <li>Text-Level Elements</li>
-                <li><a id="" class="" title="" href="/www.w3schools.com/tags/tag_li.html" target="">Lists</a>
+                <li><a id="" class="" title="" href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_li.html" target="">Lists</a>
                     <ul>
-                        <li><a href="/www.w3schools.com/tags/tag_ul.html">Unordered Lists</a>
+                        <li><a href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_ul.html">Unordered Lists</a>
                         </li>
-                        <li><a href="/www.w3schools.com/tags/tag_ol.html">Ordered Lists</a>
+                        <li><a href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_ol.html">Ordered Lists</a>
                         </li>
                     </ul>
                 </li>
-                <li><a href="/www.w3schools.com/tags/tag_comment.html">HTML comments</a>
+                <li><a href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/tags/tag_comment.html">HTML comments</a>
                 </li>
-                <li><a href="http://localhost:22022/www.w3schools.com/css/css_boxmodel.html#gsc.tab=0" target="_blank"
+                <li><a href="http://localhost:22022/Public/Downloads/2021-fourth-cohort/www.w3schools.com/css/css_boxmodel.html#gsc.tab=0" target="_blank"
                         rel="noopener noreferrer">Box Model</a> </li>
                 <li>Validate a Web document the <a href="http://localhost:8888">W3C validator</a> </li>
                 <li>Select and create a site structure for module file project</li>
